[package]
name = "supply-demand"
version = "0.0.1"
edition = "2024"
authors = ["Sergey Shkatula <serg.shkatula@gmail.com>"]
description = "Supply-Demand - A functional dependency injection library"
license = "MIT"
repository = "https://github.com/ceil-rust/supply-demand"
keywords = ["dependency-injection", "di", "supply", "demand", "supply-demand"]
categories = ["dependency-injection", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
